上调上传文件大小限制

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.validation-timeout=250
 spring.datasource.hikari.maximum-pool-size=5
 # file download
-spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-file-size=64MB
 spring.servlet.multipart.max-request-size=512MB
 # Static Files
 spring.mvc.static-path-pattern=/**
-spring.resources.static-locations=file:static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+spring.resources.static-locations=file:static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/public/
 # Upload File Link
 # Customize
